syntax = "proto3";

option go_package = "./proto";

package math_service;

message addRequest {
   int32 number1 = 1;
   int32 number2 = 2;
}

message addResponse {
  int32 sum =1;
}


service MathService {
 rpc add(addRequest) returns (addResponse) {};
}